--- a/templates/default/_header.html.twig
+++ b/templates/default/_header.html.twig
@@ -75,6 +75,12 @@
                         <span class="d-lg-none d-xl-inline">Pilotes</span>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="{{ path("calendar") }}" class="nav-link">
+                        <span class="fa fa-calendar"></span>
+                        <span class="d-lg-none d-xl-inline">Calendrier</span>
+                    </a>
+                </li>
                 {% if app.user %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"
