--- a/templates/admin/layout.html.twig
+++ b/templates/admin/layout.html.twig
@@ -1,5 +1,6 @@
 {# admin layout #}
 {% extends "base.html.twig" %}
+{% set libSelect2=true %}
 
 {% block head %}
     {{ parent() }}
@@ -17,15 +18,6 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/4.1.3/css/sb-admin-2.css"
           integrity="sha512-1HclAOkQSKIyDqJS8azD2GusAZTbtDrChZU0o0UL2+3lDw2KeMLCEYOQzsO2joppy8L+CVKI3SkXBeZb3vUwYA=="
           crossorigin="anonymous"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"
-            integrity="sha512-2ImtlRlf2VVmiGZsjm9bEyhjGW4dU7B6TNwh/hx/iSByxNENtj3WVE6o/9Lj4TJeVXPi4bnOIMXFIJJAeufa0A=="
-            crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css"
-          integrity="sha512-nMNlpuaDPrqlEls3IX/Q56H36qvBASwb3ipuo3MxeWbsQB1881ox0cRv7UPTgBlriqoynt35KjEwgGUeUXIPnw=="
-          crossorigin="anonymous"/>
-    <script src="{{ asset('bundles/tetranzselect2entity/js/select2entity.js') }}"></script>
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/@ttskch/select2-bootstrap4-theme@x.x.x/dist/select2-bootstrap4.min.css">
 {% endblock head %}
 
 {% block bodyAttributes %} id="page-top"{% endblock bodyAttributes %}
@@ -78,6 +70,12 @@
                 <a class="nav-link" href="{{ path("admin_file_list") }}">
                     <i class="fas fa-file-alt"></i>
                     <span>Fichiers</span>
+                </a>
+            </li>
+            <li class="nav-item{% if section == "admin" and subSection == "calendar-event" %} active{% endif %}">
+                <a class="nav-link" href="{{ path("admin_calendar_event_list") }}">
+                    <i class="fas fa-file-alt"></i>
+                    <span>Evénements</span>
                 </a>
             </li>
             <hr class="sidebar-divider">
