--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -4,7 +4,15 @@
 
 {% block pageContent %}
     <div class="container container-main pt-3 pb-3 mb-3">
-        <h1>Mon profil</h1>
+        <h1>
+            Mon profil
+            <div class="float-right">
+                <a href="{{ path('user_view', {'user': app.user.nickname}) }}" class="btn btn-link"
+                   title="Voir mon profil">
+                    <i class="fa fa-eye fa-2x"></i>
+                </a>
+            </div>
+        </h1>
     </div>
     <div class="container container-main pt-3 pb-3 mb-3">
         <h1>Mes modules</h1>
