fix url link to discord, close #203

--- a/templates/default/_header.html.twig
+++ b/templates/default/_header.html.twig
@@ -1,7 +1,8 @@
 <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
     <div class="container">
-        <a href="/" class="navbar-brand" title="v{{ app_version }}"><img src="{{ cdn_veaf }}/img/site-logo.png"
-                                                                         class="logo-navbar"></a>
+        <a href="/" class="navbar-brand" title="v{{ app_version }}">
+            <img src="{{ cdn_veaf }}/img/site-logo.png" class="logo-navbar">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -14,10 +15,12 @@
                         <span class="d-lg-none d-xl-inline">Les nouvelles</span>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="news">
-                        <a href="https://discord.gg/KSgGtcFQ" class="dropdown-item" target="_blank"><span
-                                    class="fab fa-discord"></span> Discord</a>
-                        <a href="http://www.facebook.com/veairforce/" class="dropdown-item" target="_blank"><span
-                                    class="fab fa-facebook"></span> Facebook</a>
+                        <a href="https://tinyurl.com/veafdisc" class="dropdown-item" target="_blank">
+                            <span class="fab fa-discord"></span> Discord
+                        </a>
+                        <a href="http://www.facebook.com/veairforce/" class="dropdown-item" target="_blank">
+                            <span class="fab fa-facebook"></span> Facebook
+                        </a>
                     </div>
                 </li>
                 <li class="nav-item">
