--- a/templates/admin/layout.html.twig
+++ b/templates/admin/layout.html.twig
@@ -84,6 +84,12 @@
                     <span>Urls</span>
                 </a>
             </li>
+            <li class="nav-item{% if section == "admin" and subSection == "menu-item" %} active{% endif %}">
+                <a class="nav-link" href="{{ path("admin_menu_item_list") }}">
+                    <i class="fas fa-file-alt"></i>
+                    <span>Eléments menu</span>
+                </a>
+            </li>
             <hr class="sidebar-divider">
             <div class="sidebar-heading">
                 DCS
