--- a/templates/user/view.html.twig
+++ b/templates/user/view.html.twig
@@ -15,7 +15,7 @@
             {% endif %}
         </h1>
     </div>
-    {% if totalHours > 0 %}
+    {% if stats is not null %}
         <div class="container container-main mb-3">
             <div class="row justify-content-center">
                 <div class="col-lg-4 pt-3">
@@ -24,7 +24,7 @@
                         <div class="card-body">
                             <i class="fa fa-clock fa-4x"></i>
                             <div class="float-right card-stats-text text-right">
-                                {{ totalHours | number_format(1, '.', ' ') }} h
+                                {{ stats.totalHours | number_format(1, '.', ' ') }} h
                             </div>
                         </div>
                     </div>
@@ -66,7 +66,15 @@
                     </div>
                 </div>
             </div>
-        </div>    {% endif %}
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="float-right">
+                        <a href="{{ path('user_stats', {'user': user.nickname}) }}">plus de stats ...</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endif %}
     <div class="container container-main pt-3 pb-3 mb-3">
         <h1>Modules</h1>
 
